Resolve coding issues reported by SonarQube.